Fixed portfolio item stretching on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -38,6 +38,7 @@ header
         margin: 10px 16px 10px 0;
         padding: 2px;
         border-radius: 2px;
+        flex-grow: 1;
 
         h3
         {
